// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestPushPermissions must update the store if OneSignal returns true: After calling mutation 1`] = `
Object {
  "hasPrompted": false,
  "notificationsEnabled": true,
}
`;

exports[`requestPushPermissions must update the store if OneSignal returns true: Before calling mutation 1`] = `
Object {
  "hasPrompted": false,
  "notificationsEnabled": false,
}
`;
